fix: text-align center added

--- a/src/components/auth/signup/signup.css
+++ b/src/components/auth/signup/signup.css
@@ -1,4 +1,5 @@
 .signup__container {
+  text-align: center;
   width: 60%;
   height: 70vh;
   margin: 0 auto;
